# rust-spoticli

./: .env  Cargo.toml
src/: main.rs
src/events/: keyboard_events.rs  mod.rs  types.rs
src/services/: app_state.rs  index.html  mod.rs  oauth_server.rs  player_ui.rs  spotify_adapter.rs  spotify_client.rs
src/state/: album_art_state.rs  mod.rs  playing_state.rs  playlist_state.rs  progress_state.rs  state_adaptor.rs  update_ticks.rs
src/types/: mod.rs  playback_state.rs
src/types/app/: event_types.rs  mod.rs  playlists.rs  updatable.rs
src/types/full/: mod.rs  now_playing.rs  playback_state.rs  playlist.rs  playlists.rs  user.rs
src/ui/: album_art.rs  builder.rs  mod.rs  player_ui.rs
src/util/: time.rs
